i link my githib file with git

--- a/hello.html
+++ b/hello.html
@@ -10,5 +10,6 @@
     <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est blanditiis iste reiciendis cum tempora et, rerum accusantium ullam ipsam necessitatibus consequuntur omnis error aperiam consectetur eius quod. Dignissimos, necessitatibus reprehenderit.</h1>
     <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat, magni!</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non, dolorem maxime dolores cupiditate iure voluptatem at ipsum iste hic exercitationem?</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui, ratione!</p>
 </body>
 </html>
